#7 ViewPort EnsureVisible ViewPort better demo ViewPort buttons scroll like md-tab

--- a/src/component/viewport/viewport.component.scss
+++ b/src/component/viewport/viewport.component.scss
@@ -1,31 +1,72 @@
 :host {
 	position: relative;
-	&[direction="vertical"] {
-		#viewport-wrapper {
-			overflow-x: visible;
-			overflow-y: auto;
-			>span {
+	display: flex;
+	overflow: hidden;
+    &[scrolling="true"] {
+        user-select: none;
+    }
+	&[scollstyle="scrollbar"] {
+		&[direction="vertical"] {
+			#viewport-wrapper {
 				width: 100%;
+				overflow-x: visible;
+				overflow-y: auto;
+				>span {
+					width: 100%;
+				}
+			}
+		}
+		&[direction="horizontal"] {
+			#viewport-wrapper {
+				height: 100%;
+				overflow-x: auto;
+				overflow-y: visible;
+				>span {
+					height: 100%;
+				}
 			}
 		}
 	}
-	&[direction="horizontal"] {
+	&:not([scollstyle="scrollbar"]) {
+		&[direction="vertical"] {
+			flex-direction: column;
+		}
 		#viewport-wrapper {
-			overflow-x: auto;
-			overflow-y: visible;
-			>span {
-				height: 100%;
-			}
+			overflow: hidden;
 		}
 	}
 	#viewport-wrapper {
-		height: 100%;
-		width: 100%;
 		position: relative;
+		flex: 1 1 auto;
 		>span {
 			padding: 0;
 			margin: 0;
 			overflow: hidden;
+		}
+	}
+	#up,
+	#down {
+		flex: 0 0 auto;
+		display: flex;
+		justify-content: space-around;
+		align-items: center;
+		font-size: 120%;
+		cursor: pointer;
+	}
+
+	&[direction="vertical"] {
+		#up,
+		#down {
+			margin: 0.5rem 0;
+		}
+	}
+	&[direction="horizontal"] {
+		#up,
+		#down {
+			margin: 0 0.5rem;
+			>i {
+				transform: rotate(270Deg);
+			}
 		}
 	}
 }
