--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -53,6 +53,7 @@
 @import '../component/range/range-theme';
 @import '../component/select/select-theme';
 @import '../component/tree-list/tree-list-theme';
+@import '../component/viewport/viewport-theme';
 
 // Create a theme.
 @mixin deja-theme($custom-theme) {
@@ -71,4 +72,5 @@
     @include range-theme($custom-theme);
     @include select-theme($custom-theme);
     @include tree-list-theme($custom-theme);
+    @include viewport-theme($custom-theme);
 }
